@@ -66,6 +66,10 @@ subtitle-subviewer.sub text/x-subviewer x
 # text
 text-iso8859-15.txt text/plain ox
 text-utf8.txt text/plain ox
+# Copied from http://www.computerperformance.co.uk/vista/vista_reg_examples.htm
+registry.reg text/x-ms-regedit
+# Copied from http://www.ss64.com/nt/regedit.html
+registry-nt.reg text/x-ms-regedit
 
 # xml subtypes
 test.ttx application/x-font-ttx
