@@ -1,0 +1,3 @@
+REGEDIT4
+[HKEY_CURRENT_USER\SomeKey]
+"SomeStringValue"="Hello" 
